--- a/css/lab2.css
+++ b/css/lab2.css
@@ -9,3 +9,32 @@ body {
  background-color: #98dafc
 }
 
+h1{
+ font-size: 1.5em;
+}
+
+h2{
+ font-size: 0.75em;
+}
+
+h3{
+ font-size: 1.125em;
+}
+
+nav{
+ font-size: 1.125em;
+}
+
+a {
+  color: #98dafc;
+  font-weight: bold; 
+}
+
+a:visited {
+ color: #daad86;
+}
+
+a:hover {
+ background-color: #FFFFCC;
+}
+
