--- a/css/lab2.css
+++ b/css/lab2.css
@@ -48,15 +48,15 @@ color:#98dafc;
 }
 
 figure img{
-border: 0.1em solid #ddd;
+border: black 1px solid;
 padding: 0.25em;
-margin:0em 0em 0em 0.5em;
+margin: auto;
 background:white;
 position:relative;
 top:50%;
 left:0%;
 margin-right:-50%;
-width:97.5%;
+width:98%;
 height:auto;
 }
 
