--- a/css/lab2.css
+++ b/css/lab2.css
@@ -82,7 +82,8 @@ height:auto;
 .gradient{
  width: 100%;
  height: 50px;
- border: 1px solid gray;
+ border: 1px solid black;
  border-radius: 5px;
+ color: #808080;
 }
 
